[gd_scene load_steps=7 format=3 uid="uid://dss7p1m5td40b"]

[ext_resource type="Script" path="res://Components/FootComponent.gd" id="1_cis1h"]
[ext_resource type="AudioStream" uid="uid://d2u622r7gp6ay" path="res://Sounds/Concrete 1.wav" id="2_nm110"]

[sub_resource type="Curve" id="Curve_r0nah"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_sgv2x"]
curve = SubResource("Curve_r0nah")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xjivf"]
emission_shape = 2
emission_sphere_radius = 0.3
direction = Vector3(0, 10, 0)
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 4.0
scale_curve = SubResource("CurveTexture_sgv2x")

[sub_resource type="SphereMesh" id="SphereMesh_sdwly"]
radius = 0.1
height = 0.2

[node name="FootComponent" type="Node3D"]
script = ExtResource("1_cis1h")

[node name="footSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_nm110")
volume_db = -10.0
unit_size = 5.43
max_db = 2.0

[node name="footParticle" type="GPUParticles3D" parent="."]
cast_shadow = 0
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_xjivf")
draw_pass_1 = SubResource("SphereMesh_sdwly")
